# also-not-Echos-Client

./: .gitignore  .gitmodules  CMakeLists.txt  Echos Client.sln  README.md
Echo's Client/: Echo's Client.vcxproj  Echo's Client.vcxproj.filters  dllmain.cpp  packages.config
Echo's Client/Client/: Client.cpp  Client.h
Echo's Client/Client/Categories/: Category.h
Echo's Client/Client/Modules/: Module.cpp  Module.h
Echo's Client/Client/Modules/Module/: AirJump.cpp  AirJump.h  AutoSprint.cpp  AutoSprint.h  Coords.cpp  Coords.h  Freecam.cpp  Freecam.h  Hitbox.cpp  Hitbox.h  Jetpack.cpp  Jetpack.h  Killaura.cpp  Killaura.h  Speed.cpp  Speed.h  Step.cpp  Step.h  TabGui.cpp  TabGui.h  TestMod.cpp  TestMod.h  Uninject.cpp  Uninject.h
Echo's Client/Math/: Math.h
Echo's Client/Memory/Hooks/Hook/: Actor.cpp  Actor.h  ClientInstance.cpp  ClientInstance.h  GameMode.cpp  GameMode.h  KeyItem.cpp  LoopbackPacketSender.cpp  (+3 more)
Echo's Client/Memory/SDK/: Minecraft.cpp
Echo's Client/Utils/: Renderer.cpp  Renderer.h  Utils.cpp
Source/: CMakeLists.txt
Source/Client/: CMakeLists.txt  Client.cpp  Client.h
Source/Client/Categories/: CMakeLists.txt  Category.cpp
Source/Client/Modules/: CMakeLists.txt
Source/Math/: CMakeLists.txt  Math.h
Source/Memory/: CMakeLists.txt
Source/Memory/Hooks/: CMakeLists.txt  Hook.cpp  Hook.h
Source/Memory/SDK/: CMakeLists.txt  Minecraft.cpp
Source/Utils/: CMakeLists.txt  Renderer.cpp  Renderer.h
src/Client/Modules/: Module.h
src/Math/: Math.h
src/Memory/Hooks/: Hook.h
src/Memory/SDK/: Minecraft.h
src/Utils/: Renderer.cpp  Utils.h
(+32 files in other folders)
